start to build menu

--- a/template/admin.html
+++ b/template/admin.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>测试</title>
-</head>
-<body>
-<h1>hello, plugin</h1>
-</body>
-</html>
+<link rel="stylesheet" href="http://cdn.staticfile.org/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css">
+
+<h1>肉大师微信助手 - 设置</h1>
+
+<ul class="nav nav-tabs">
+  <li class="nav-item">
+    <a class="nav-link active" href="#">配置</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">抓取</a>
+  </li>
+</ul>
