--- a/template/admin.html
+++ b/template/admin.html
@@ -12,19 +12,18 @@
 <div id="mm-weixin-admin">
   <el-tabs v-model="activeName" type="card">
     <el-tab-pane label="抓取文章" name="weixin-article-list">
-      <el-button type="primary" :loading="false" @click="fetch">获取文章列表</el-button>
+      <el-button type="primary" @click="fetch" ref="fetchButton">获取文章列表</el-button>
     </el-tab-pane>
     <el-tab-pane label="设置" name="settings">
-      <el-form ref="form" label-width="5rem">
-        <input type="hidden" name="action" value="mm_weixin_save_config">
+      <el-form ref="form" label-width="5rem" v-model="settings">
         <el-form-item label="AppID">
-          <el-input name="app_id" value="{{app_id}}"></el-input>
+          <el-input name="app_id" v-model="settings.app_id" value="{{app_id}}" data-name="app_id"></el-input>
         </el-form-item>
         <el-form-item label="AppSecret">
-          <el-input name="app_id" value="{{app_secret}}"></el-input>
+          <el-input name="app_id" v-model="settings.app_secret" value="{{app_secret}}" data-name="app_secret"></el-input>
         </el-form-item>
         <el-form-item>
-          <el-button type="primary" ref="submit-button" @click="saveSettings">保存</el-button>
+          <el-button type="primary" ref="submitButton" @click="saveSettings">保存</el-button>
         </el-form-item>
       </el-form>
     </el-tab-pane>
