可以导入文章了
Signed-off-by: Meathill <meathill@gmail.com>

--- a/styl/screen.styl
+++ b/styl/screen.styl
@@ -1,2 +1,14 @@
 #mm-weixin-admin
   margin: 2rem 2rem 0 .5rem
+
+for n in 1..4
+  .mb-{n}
+    margin-bottom 1rem * n
+
+  .mt-{n}
+    margin-top 1rem * n
+
+.img-thumbnail
+  max-width 200px
+  padding 0.25rem
+  border 1px solid gray
