--- a/template/admin.html
+++ b/template/admin.html
@@ -9,30 +9,71 @@
 </head>
 <body>
 
+<h1>肉大师微信助手 - 设置</h1>
 <div id="mm-weixin-admin">
-  <el-tabs v-model="activeName" type="card">
-    <el-tab-pane label="抓取文章" name="weixin-article-list">
-      <el-button type="primary" @click="fetch" ref="fetchButton">获取文章列表</el-button>
-    </el-tab-pane>
-    <el-tab-pane label="设置" name="settings">
-      <el-form ref="form" label-width="5rem" v-model="settings">
-        <el-form-item label="AppID">
-          <el-input name="app_id" v-model="settings.app_id" value="{{app_id}}" data-name="app_id"></el-input>
-        </el-form-item>
-        <el-form-item label="AppSecret">
-          <el-input name="app_id" v-model="settings.app_secret" value="{{app_secret}}" data-name="app_secret"></el-input>
-        </el-form-item>
-        <el-form-item>
-          <el-button type="primary" ref="submitButton" @click="saveSettings">保存</el-button>
-        </el-form-item>
-      </el-form>
-    </el-tab-pane>
-  </el-tabs>
+  <template>
+    <el-tabs v-model="activeName" type="card">
+      <el-tab-pane label="抓取文章" name="weixin-article-list">
+        <el-row type="flex" class="mb-1" justify="space-between">
+          <el-button type="primary" @click="fetch" ref="fetchButton">获取文章列表</el-button>
+          <el-pagination layout="prev, pager, next" ref="pagination"
+                         :page-size="20"
+                         @current-change="turnToPage">
+          </el-pagination>
+        </el-row>
+        <el-table :data="items" border>
+          <el-table-column label="封面图片">
+            <template scope="scope">
+              <img :src="scope.row.thumb_url" class="img-thumbnail">
+            </template>
+          </el-table-column>
+          <el-table-column label="标题">
+            <template scope="scope">
+              <a :href="scope.row.url" v-text="scope.row.title" target="_blank"></a>
+            </template>
+          </el-table-column>
+          <el-table-column prop="author" label="作者"></el-table-column>
+          <el-table-column prop="digest" label="摘要"></el-table-column>
+          <el-table-column label="更新时间">
+            <template scope="scope">
+              <time :datetime="scope.row.update_time" v-text="scope.row.update_time"></time>
+            </template>
+          </el-table-column>
+          <el-table-column label="操作">
+            <template scope="scope">
+              <el-popover placement="top-start" title="导入信息" trigger="hover" v-if="scope.row.post_id">
+                <slot name="content">
+                  导入时间：<time :datetime="scope.row.fetch_time" v-text="scope.row.fetch_time"></time><br>
+                  <a :href="'/?id=' + scope.row.post_id" target="_blank">前往预览</a>
+                </slot>
+              </el-popover>
+              <el-button @click="importArticle(scope.row, scope.$index)" :loading="scope.row.fetching">导入</el-button>
+            </template>
+          </el-table-column>
+        </el-table>
+
+      </el-tab-pane>
+      <el-tab-pane label="设置" name="settings">
+        <el-form ref="form" label-width="5rem" v-model="settings">
+          <el-form-item label="AppID">
+            <el-input name="app_id" v-model="settings.app_id" value="{{app_id}}" data-name="app_id"></el-input>
+          </el-form-item>
+          <el-form-item label="AppSecret">
+            <el-input name="app_id" v-model="settings.app_secret" value="{{app_secret}}" data-name="app_secret"></el-input>
+          </el-form-item>
+          <el-form-item>
+            <el-button type="primary" ref="submitButton" @click="saveSettings">保存</el-button>
+          </el-form-item>
+        </el-form>
+      </el-tab-pane>
+    </el-tabs>
+  </template>
 </div>
 
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/vue/dist/vue.min.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/vue-resource/dist/vue-resource.min.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/element-ui/lib/index.js"></script>
+<script src="/wp-content/plugins/master-meat-weixin/node_modules/moment/min/moment-with-locales.min.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/dist/admin.bundle.js"></script>
 </body>
 </html>
