使用 DOMDocument 解析 HTML。基本完成抓取。
Signed-off-by: Meathill <meathill@gmail.com>

--- a/template/admin.html
+++ b/template/admin.html
@@ -61,6 +61,12 @@
           </el-form-item>
         </el-form>
       </el-tab-pane>
+      <el-tab-pane label="帮助" name="help">
+        <h2>注意事项</h2>
+        <ol>
+          <li>微信文章默认启用 lazyload，抓回来也保持着 lazyload，所以请保证文章页启用了 lazyload。</li>
+        </ol>
+      </el-tab-pane>
     </el-tabs>
   </template>
 </div>
