--- a/template/admin.html
+++ b/template/admin.html
@@ -16,9 +16,7 @@
       <el-tab-pane label="抓取文章" name="weixin-article-list">
         <el-row type="flex" class="mb-1" justify="space-between">
           <el-button type="primary" @click="fetch" ref="fetchButton">获取文章列表</el-button>
-          <el-pagination layout="prev, pager, next" ref="pagination"
-                         :page-size="20"
-                         @current-change="turnToPage">
+          <el-pagination layout="prev, pager, next" ref="pagination" :page-size="20" @current-change="turnToPage">
           </el-pagination>
         </el-row>
         <el-table :data="items" border>
@@ -36,13 +34,14 @@
           </el-table-column>
           <el-table-column label="操作">
             <template scope="scope">
-              <el-popover placement="top-start" title="导入信息" trigger="hover" v-if="scope.row.post_id">
-                <slot name="content">
+              <template v-if="scope.row.post_id">
+                <el-popover placement="top-start" title="导入信息" trigger="hover">
+                  <el-tag slot="reference" type="success">已导入</el-tag>
                   导入时间：<time :datetime="scope.row.fetch_time" v-text="scope.row.fetch_time"></time><br>
-                  <a :href="'/?id=' + scope.row.post_id" target="_blank">前往预览</a>
-                </slot>
-              </el-popover>
-              <el-button @click="importArticle(scope.row, scope.$index)" :loading="scope.row.fetching">导入</el-button>
+                  <a :href="'/?p=' + scope.row.post_id" target="_blank">前往预览</a>
+                </el-popover>
+              </template>
+              <el-button @click="importArticle(scope.row, scope.$index)" :ref="'importButton' + scope.$index">导入</el-button>
             </template>
           </el-table-column>
         </el-table>
