begin to add sync to weixin

--- a/template/admin.html
+++ b/template/admin.html
@@ -65,6 +65,9 @@
         <ol>
           <li>微信文章默认启用 lazyload，抓回来也保持着 lazyload，所以请保证文章页启用了 lazyload。</li>
         </ol>
+        <h2>关于</h2>
+        <p>肉大师微信助手 v0.1</p>
+        <p>作者：<a href="//meathill.com/">Meathill</a> </p>
       </el-tab-pane>
     </el-tabs>
   </template>
