--- a/template/admin.html
+++ b/template/admin.html
@@ -14,6 +14,8 @@
 </div>
 
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/vue/dist/vue.runtime.js"></script>
+<script src="/wp-content/plugins/master-meat-weixin/node_modules/vue-router/dist/vue-router.min.js"></script>
+<script src="/wp-content/plugins/master-meat-weixin/node_modules/vuex/dist/vuex.min.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/vue-resource/dist/vue-resource.min.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/element-ui/lib/index.js"></script>
 <script src="/wp-content/plugins/master-meat-weixin/node_modules/moment/min/moment-with-locales.min.js"></script>
