Feature: add error message.

--- a/styl/screen.styl
+++ b/styl/screen.styl
@@ -12,3 +12,10 @@ for n in 1..4
   max-width 200px
   padding 0.25rem
   border 1px solid gray
+
+.ml-auto
+  margin-left auto
+
+.mx-1
+  margin-left 1em
+  margin-right 1em
